Fix products image align, add hover effect

--- a/large-catalog/assets/products.css
+++ b/large-catalog/assets/products.css
@@ -40,7 +40,15 @@
   text-decoration: none;
 }
 
+.products .bq-product a:hover {
+  text-decoration: underline;
+}
+
 .products .bq-product__image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   width: 100%;
   height: 240px;
 
